--- a/classificacao-back-end/src/main/resources/application.properties
+++ b/classificacao-back-end/src/main/resources/application.properties
@@ -1,14 +1,3 @@
-#spring.datasource.url=jdbc:postgresql://localhost/empresa?serverTimezone=UTC
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.jpa.generate-ddl=true
-
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate_sql=true
-#spring.jpa.hibernate.ddl-auto=create
-
-#server.port=${port:8080}
-
 spring.datasource.url=jdbc:postgresql://motty.db.elephantsql.com/lgknkwha
 spring.datasource.username=lgknkwha
 spring.datasource.password=VJ9ECrQBbEoQ1OQ0r92AztZ9g_CZnosZ
@@ -16,3 +5,6 @@ spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=${port:8080}
